2005-02-11  Jeff Hobbs  <jeffh@ActiveState.com>

	* unix/Makefile.in: remove SHLIB_LD_FLAGS (only for AIX, inlined
	* unix/tcl.m4:      into SHLIB_LD).  Combine AIX-* and AIX-5
	* unix/configure:   branches in SC_CONFIG_CFLAGS.
	Correct gcc builds for AIX-4+ and HP-UX-11.  autoconf-2.59 gen'd.

2005-02-09  Donal K. Fellows  <donal.k.fellows@manchester.ac.uk>

	* tests/wm.test: Convert to use more tcltest2 features.

2005-02-07  Donal K. Fellows  <donal.k.fellows@manchester.ac.uk>

	* generic/tkCanvas.c (CanvasWidgetCmd): Fix stupid mistake in
	variable names, reported by Andreas Leitgeb.

2005-02-03  Donal K. Fellows  <donal.k.fellows@manchester.ac.uk>

	* generic/tkCanvas.c (GetStaticUids): New function to manage the
	thread-specific data detailing the list of all uids in a thread.
	(typeList): Protect this (the other piece of global data) with a
	mutex. [Bug 1114977]

2005-01-31  Jeff Hobbs  <jeffh@ActiveState.com>

	* unix/tcl.m4, unix/configure: add solaris-64 gcc build
	support. [Bug 1021871]

2005-01-31  Donal K. Fellows  <donal.k.fellows@manchester.ac.uk>

	* generic/tkImgPhoto.c (PhotoFormatThreadExitProc): Made the
	comments in the code more relevant to the function they were
	documenting! [Bug 1110553]

	* library/msgs/es_ES.msg: Added more localization for Spanish
	Spanish. [Bug 1111213]

2005-01-25  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/tkMacOSXInit.c (TkpInit): set tcl_interactive to 1 to show
	console at startup instead of directly calling [console show].
	
	* unix/tcl.m4 (Darwin): fixed bug with static build linking to
	dynamic library in /usr/lib etc instead of linking to static library
	earlier in search path. [Tcl Bug 956908]
	Removed obsolete references to Rhapsody. 
	* unix/configure: autoconf-2.57

2005-01-18  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* library/demos/menu.tcl: Reworked to make dialogs children of the
	demo widget so that they are properly visible. Issue reported by
	Keith Nash <k.j.nash@usa.net>
