@@ -1,5 +1,9 @@
 2005-02-11  Jeff Hobbs  <jeffh@ActiveState.com>
 
+	* generic/tkCanvBmap.c (ConfigureBitmap, ComputeBitmapBbox): Fixed
+	possible crash with disabled bmap and bbox handling [Bug 1119460]
+	(BitmapToPostscript): made aware of various bitmap types
+
 	* unix/Makefile.in: remove SHLIB_LD_FLAGS (only for AIX, inlined
 	* unix/tcl.m4:      into SHLIB_LD).  Combine AIX-* and AIX-5
 	* unix/configure:   branches in SC_CONFIG_CFLAGS.
